# taskradar

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py
backend/accounts/migrations/: 0001_add_model_user.py
backend/config/: asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
backend/datasets/: admin.py  apps.py
backend/datasets/migrations/: 0001_initial.py
backend/datasets/models/: __init__.py  post.py  post_vector.py  source.py
backend/parsers/: database.py  fl_parser.py  freelance_ru_parser.py  freelancejob_parser.py  tasks.py  vectorizer.py  weblancer_parser.py  workzilla_parser.py
backend/parsers/management/commands/: vectorize_all.py
backend/search/migrations/: 0001_initial.py
backend/search/models/: __init__.py  search_entry.py
backend/search/pipeline/: __init__.py  keywords.py  schemas.py  search_pipeline.py
backend/search/pipeline/stages/: __init__.py  build_query.py  filters.py  semantic.py  serialize.py
backend/search/rest/: urls.py
backend/search/rest/v1/: sources_view.py  urls.py  views.py
docs/: README.md  parsers.md  roles.md  todo.md
docs/analytics/: sources.md
frontend/: Dockerfile  README.md  biome.json  package-lock.json  package.json
frontend/src/: App.tsx  frontend.tsx  index.html  index.tsx
frontend/src/components/: app-dialogs.tsx  app-sidebar.tsx  login-form.tsx  nav-documents.tsx  nav-main.tsx  nav-user.tsx  project-charts.tsx  site-footer.tsx  site-header.tsx
frontend/src/components/ui/: chart.tsx  dropdrawer.tsx  sidebar.tsx
frontend/src/core/: text.ts
frontend/src/dialogs/: create-monitor.tsx  create-panel.tsx
frontend/src/hooks/: use-api.ts  use-project.ts
frontend/src/lib/: client.ts  schemas.ts  types.ts
frontend/src/pages/: analytics.tsx  authenticatuon.tsx  home.tsx  panel.tsx  panels.tsx  sources.tsx  task-detail.tsx  tasks.tsx  users.tsx
frontend/src/states/: application.ts
frontend/styles/: globals.css
infra/: docker-compose.postgres.yml
libs/ml/encoders/: __init__.py  e5base.py  encoder.py
libs/ml/preprocessors/: __init__.py  normalizer.py  preprocessor.py
libs/ml/preprocessors/data/: stopwords.txt
libs/parsers/: celery_app.py  database.py  fl_parser.py  freelance_ru_parser.py  freelancejob_parser.py  login_once.py  pyproject.toml  run_all_once.py  tasks.py  weblancer_parser.py  workzilla_parser.py
libs/utils/: __init__.py  run_with_timer.py  safe_html.py
