[project]
name = "backend"
version = "0.1.0"
description = "Django backend for the Task Radar project."
readme = "README.md"
authors = [
    { name = "Полуянов В.Н.", email = "vnpoluyanov@gmail.com" }
]
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "6.0.3"
pydantic = "2.12.5"
pydantic-settings = "2.13.1"
psycopg = { version = "3.2.12", extras = ["binary"] }
numpy = "2.4.4"  # Libs
bleach = "6.3.0"  # Libs
types-bleach = "^6.3.0.20260408"  # Libs
emoji = "2.15.0"  # Libs
pymorphy3 = "2.0.6"  # Libs
sentence-transformers = "5.4.0"  # Libs
pgvector = "^0.4.2"
celery = {version = ">=5.3", extras = ["redis"]}
django-cors-headers = ">=4.0"
selenium = ">=4.0"
tqdm = ">=4.60"

[dependency-groups]
dev = [
    "ruff == 0.15.9",
    "mypy == 1.20.0",
    "bandit == 1.9.4",
]


[tool.ruff]
line-length = 100
target-version = "py313"
fix = true
show-fixes = true
exclude = ["venv/", ".venv/", "tests/", "scripts/", "docs/", "migrations/", "unversioned/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long, handled by black
    "B008",  # Do not perform function calls in argument defaults
    "W191",  # Indentation contains tabs
]


[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
exclude = "^(venv|.venv|tests|scripts|docs|migrations|unversioned)/"
disable_error_code = ["has-type"]

[tool.bandit]
skips = [
    "B101",  # Assert
    "B404"   # Subprocess without shell=False
]
exclude_dirs = ["venv", ".venv", "tests", "scripts", "docs", "migrations", "unversioned"]
